[pom] Update to jmockit 1.41